# salamandra-cot

./: .gitignore  LICENSE  README.md  download_data.sh  joiner.py  params.yaml  pyproject.toml  requirements.in  requirements.txt  run.sh
axolotl/: salamandra_2b_cot_eng.yaml
docker/: Dockerfile
src/: data.py
src/stages/: convert_datasets.py  evaluate_models.py  format_datasets.py  preprocess_datasets.py  translate_datasets.py
src/utils/: config.py  logging.py  utils.py
