[project]
name = "salamandra-cot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "transformers",
    "sentencepiece",
    "pandas",
    "tqdm",
    "matplotlib",
    "datasets",
    "evaluate",
    "pyarrow",
    "python-box",
    "black",
    "isort",
    "protobuf",
    "pynvml",
    "lighteval @ git+https://github.com/huggingface/lighteval.git@main",
    "fsspec",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
